Added image and updated blog post

--- a/about.html
+++ b/about.html
@@ -4,5 +4,7 @@ title: About
 image: /images/blog/mystery.png
 ---
 
-<p>Lorem ipsum dolor sit amet.</p>
-<p> Good luck.</p>
+<p>
+  Well hello there, and welcome to the About page.  I am the Nanotech Norseman.  I don't know if you found me by accident or what, but I'm glad you're here.
+</p>
+<p></p>
