Added template for posts, updated about.html w/info

--- a/about.html
+++ b/about.html
@@ -7,4 +7,15 @@ image: /images/blog/mystery.png
 <p>
   Well hello there, and welcome to the About page.  I am the Nanotech Norseman.  I don't know if you found me by accident or what, but I'm glad you're here.
 </p>
-<p></p>
+<p>
+  <b>Ways to reach me</b>
+  <ul>
+    <li><a href="mailto:nanotechnorseman@gmail.com">E-mail</a></li>
+    <li><a href="http://twitch.tv/nanotechnorseman">Twitch</a></li>
+    <li><a href="http://www.twitter.com/NanotekNorseman">Twitter</a></li>
+  <ul>
+</p>
+
+Feel free to send me a message of any sorts, and I'll try to reply as quickly as I'm able to.
+
+-Nanotech Norseman
